# tauri_preact_template_deno

./: .gitignore  README.md  _typos.toml  build.ts  deno.json
.github/workflows/: typos.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-www/: index.html  index.tsx  main.tsx
src-www/components/: Counter.tsx
src-www/source/: home.tsx
src-www/static/: index.html
static/debug/: index.html
static/release/: index.html
static/styles/: global.css
