[package]
name = "tauri_deno_sample"
version = "0.1.0"
description = "A Tauri App"
authors = ["Decodetalkers"]
license = "MIT"
repository = "https://github.com/Decodetalkers/tauri_deno_desktop_train"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.2", features = [] }
once_cell = "1.20.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
